
CheckSum Tool 0.5.0
  New toolbar/menuitem icons from famfamfam.com (#1883992)
  Add second toolbar for checksum-related buttons
  Bugfix: Fix updating item count in the statusbar.
  New list column named "Size", showing file size.
  Add ProgressBar for showing process progress.
  Improve file size formatting in main window.
  Make configuration XML file more structured.

CheckSum Tool 0.4.0 - 2008-02-05 (r158)
  Add Select All to Edit-menu (also CTRL+A shortcut key)
  Add Copy -item to Edit-menu (copies checksums to clipboard)
  Add Help / Contributors menu item to main menu for opening contributors list
  Add missing mnemonic characters to menu items
  Show error message for items not having checksum or file not found when verifying
  Allow relative paths in checksum files
  Installer: Include ChangeLog.txt and Contributors.txt in installer.
  Installer: Add version resource info for installer executable file.
  Clarify copyright - it is Kimmo and Ixonos.
  Allow moving and docking of toolbar
  Manual: Mention relative paths shortly in context of saving files.
  Bugfix: First load of other than default (SHA-1) sum file failed to load sums

CheckSum Tool 0.3.0 - 2008-01-07 (r107)
  Manual: Add initial version of user manual (in html format)
  Add manual item to Help-menu
  Rename About-menu to Help-menu
  Try to detemine file's type from filename when opening checksum file
  Add titles to Open- and Save As-dialogs
  Make verified status three-state (not verified, verified OK and verify failed)
  Installer: Exit install if required DotNet version is not found
  Installer: Install user manual
  Update copyright year to contain 2008 in About-dialog and in documents
  Disable Save-button in toolbar and Save-item in File-menu when list has no changes
  Add Checksum types to CheckSums-menu
  Add star to program title when filelist is changed
  Bugfix: Don't add space to installer executable filename